--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
+* {
+  padding:0;
+  margin:0;
+}
 .App {
+  background-color: rgb(31, 31, 31);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width:100vw;
+  height:100vh;
+}
+
+.calc-container {
+  background-color: rgb(206, 206, 206);
+  width: 680px;
+  height: 500px;
+  align-self: center;
+  padding:18px;
+}
+
+.screen-container {
+  background-color: rgb(238, 238, 238);
+  height: 15%;
+  display: flex;
+  justify-content: center;
+}
+
+.screen-text {
+  width:90%;
+  margin: 10px;
+  font-size: 40pt;
+  text-align: right;
+}
+
+.buttons-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 20px;
+
+}
+.button-digit{
+  background-color: black;
   color: white;
+  font-size: 20pt;
+  width:160px;
+  height: 80px;
+  margin: 5px;
+  margin-top:15px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-arithmatic{
+  background-color: rgb(94, 89, 89);
+  color: white;
+  font-size: 20pt;
+  width:160px;
+  height: 80px;
+  margin: 5px;
+  margin-top:15px;
 }
